--- a/basic/Draw3D/Draw3D.csproj
+++ b/basic/Draw3D/Draw3D.csproj
@@ -123,6 +123,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Math3D\Func3D.cs" />
+    <Compile Include="Math3D\Matrix3x3F.cs" />
     <Compile Include="Math3D\Matrix4x4F.cs" />
     <Compile Include="Math3D\Vector2F.cs" />
     <Compile Include="Math3D\Vector4F.cs" />
